Learned example of join and for any crash cash to handle it used fetchmany

--- a/database_work/Introduction to Databases in Python.ipynb
+++ b/database_work/Introduction to Databases in Python.ipynb
@@ -411,7 +411,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "engine.execute(select([census])).fetchall()[0].keys()"
+    "engine.execute(select([\"state_fact\"])).fetchall()[0].keys()"
    ]
   },
   {
@@ -476,6 +476,162 @@
     "# Print the percentage\n",
     "print(percent_female)\n",
     "print(stmt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Build a statement to join census and state_fact tables: stmt\n",
+    "stmt = select([census.columns.pop2000, state_fact.columns.abbreviation])\n",
+    "\n",
+    "# Execute the statement and get the first result: result\n",
+    "result = connection.execute(stmt).first()\n",
+    "\n",
+    "# Loop over the keys in the result object and print the key and value\n",
+    "for key in result.keys():\n",
+    "    print(key, getattr(result, key))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Build a statement to select the census and state_fact tables: stmt\n",
+    "stmt = select([census, state_fact])\n",
+    "\n",
+    "# Add a select_from clause that wraps a join for the census and state_fact\n",
+    "# tables where the census state column and state_fact name column match\n",
+    "stmt_join = stmt.select_from(\n",
+    "    census.join(state_fact, census.columns.state == state_fact.columns.name))\n",
+    "\n",
+    "# Execute the statement and get the first result: result\n",
+    "result = connection.execute(stmt_join).first()\n",
+    "\n",
+    "# Loop over the keys in the result object and print the key and value\n",
+    "for key in result.keys():\n",
+    "    print(key, getattr(result, key))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Build a statement to select the state, sum of 2008 population and census\n",
+    "# division name: stmt\n",
+    "stmt = select([\n",
+    "    census.columns.state,\n",
+    "    func.sum(census.columns.pop2008),\n",
+    "    state_fact.columns.census_division_name\n",
+    "])\n",
+    "\n",
+    "# Append select_from to join the census and state_fact tables by the census state and state_fact name columns\n",
+    "stmt_joined = stmt.select_from(\n",
+    "    census.join(state_fact, census.columns.state == state_fact.columns.name)\n",
+    ")\n",
+    "\n",
+    "# Append a group by for the state_fact name column\n",
+    "stmt_grouped = stmt_joined.group_by(state_fact.columns.name)\n",
+    "\n",
+    "# Execute the statement and get the results: results\n",
+    "results = connection.execute(stmt_grouped).fetchall()\n",
+    "\n",
+    "# Loop over the results object and print each record.\n",
+    "for record in results:\n",
+    "    print(record)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Make an alias of the employees table: managers\n",
+    "managers = employees.alias()\n",
+    "\n",
+    "# Build a query to select names of managers and their employees: stmt\n",
+    "stmt = select(\n",
+    "    [managers.columns.name.label('manager'),\n",
+    "     employees.columns.name.label('employee')]\n",
+    ")\n",
+    "\n",
+    "# Match managers id with employees mgr: stmt_matched\n",
+    "stmt_matched = stmt.where(managers.columns.id == employees.columns.mgr)\n",
+    "\n",
+    "# Order the statement by the managers name: stmt_ordered\n",
+    "stmt_ordered = stmt_matched.order_by(managers.columns.name)\n",
+    "\n",
+    "# Execute statement: results\n",
+    "results = connection.execute(stmt_ordered).fetchall()\n",
+    "\n",
+    "# Print records\n",
+    "for record in results:\n",
+    "    print(record)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Make an alias of the employees table: managers\n",
+    "managers = employees.alias()\n",
+    "\n",
+    "# Build a query to select names of managers and counts of their employees: stmt\n",
+    "stmt = select([managers.columns.name, func.count(employees.columns.id)])\n",
+    "\n",
+    "# Append a where clause that ensures the manager id and employee mgr are equal\n",
+    "stmt_matched = stmt.where(managers.columns.id==employees.columns.mgr)\n",
+    "\n",
+    "# Group by Managers Name\n",
+    "stmt_grouped = stmt_matched.group_by(managers.columns.name)\n",
+    "\n",
+    "# Execute statement: results\n",
+    "results = connection.execute(stmt_grouped).fetchall()\n",
+    "\n",
+    "# print manager\n",
+    "for record in results:\n",
+    "    print(record)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Start a while loop checking for more results\n",
+    "while more_results:\n",
+    "    # Fetch the first 50 results from the ResultProxy: partial_results\n",
+    "    partial_results = results_proxy.fetchmany(50)\n",
+    "\n",
+    "    # if empty list, set more_results to False\n",
+    "    if partial_results == []:\n",
+    "        more_results = False\n",
+    "\n",
+    "    # Loop over the fetched records and increment the count for the state\n",
+    "    for row in partial_results:\n",
+    "        if row.state in state_count:\n",
+    "            state_count[row.state]+=1\n",
+    "        else:\n",
+    "            state_count[row.state]=1\n",
+    "\n",
+    "# Close the ResultProxy, and thus the connection\n",
+    "results_proxy.close()\n",
+    "\n",
+    "# Print the count by state\n",
+    "print(state_count)"
    ]
   },
   {
